--- a/htmls/MyMessage/MyMessage.html
+++ b/htmls/MyMessage/MyMessage.html
@@ -48,7 +48,7 @@
 <!--消息end-->
 
 <!--底部start-->
-<div class="line98"></div>
+<!--<div class="line98"></div>
 <div class="footer">
   <a href="##" title="">
     <i class="f_ico01"></i>
@@ -63,7 +63,7 @@
     <i class="f_ico03"></i>
     <h4>我的</h4>
   </a>
-</div>
+</div>-->
 <!--底部end-->
 </body>
 </html>
