--- a/SMSLogin.html
+++ b/SMSLogin.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="keywords" content="" />
-<meta name="description" content="" />
 <meta name="viewport" content="width=750,user-scalable=0" />
 <meta name="format-detection" content="telephone=no" />
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 <script type="text/javascript" src="js/jquery-1.7.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script src="js/pulsClick.js" type="text/javascript" ></script>
 <title>无标题文档</title>
 </head>
 
@@ -17,7 +16,7 @@
 <div class="header header-bg">
   <ul>
     <h1>短信登录</h1>
-    <a href="##" title="" class="back"><img src="images/10.png" alt="" width="24" height="42"/></a>
+    <a href="javascript:back();" title="" class="back"><img src="images/10.png" alt="" width="24" height="42"/></a>
   </ul>
 </div>
 <!--头部end-->
