--- a/Main.html
+++ b/Main.html
@@ -1,4 +1,4 @@
-<!doctype html>
+
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,6 +6,8 @@
 <meta name="format-detection" content="telephone=no" />
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 <link type="text/css" href="css/mui.min.css" rel="stylesheet" />
+<script type="text/javascript" src="js/jquery-1.7.min.js"></script>
+<script src="js/main.js" type="text/javascript" ></script>
 <title>无标题文档</title>
 </head>
 
