--- a/htmls/ActivitySpread/MobileActivitySelected.html
+++ b/htmls/ActivitySpread/MobileActivitySelected.html
@@ -9,6 +9,7 @@
 <link type="text/css" href="../../css/style.css" rel="stylesheet" />
 <script type="text/javascript" src="../../js/jquery-1.7.min.js"></script>
 <script type="text/javascript" src="../../js/main.js"></script>
+<script src="../../js/pulsClick.js" type="text/javascript" ></script>
 <title>无标题文档</title>
 </head>
 
@@ -17,7 +18,7 @@
 <div class="header header-bgf">
   <ul>
     <h1>移动活动精选</h1>
-    <a href="##" title="" class="back"><img src="../../images/29.png" alt="" width="24" height="42" /></a>
+    <a href="javascript:back();" title="" class="back"><img src="../../images/29.png" alt="" width="24" height="42" /></a>
   </ul>
 </div>
 <!--头部end-->
