--- a/htmls/Setting/MySettingFeedBack.html
+++ b/htmls/Setting/MySettingFeedBack.html
@@ -9,6 +9,7 @@
 <link type="text/css" href="../../css/style.css" rel="stylesheet" />
 <script type="text/javascript" src="../../js/jquery-1.7.min.js"></script>
 <script type="text/javascript" src="../../js/main.js"></script>
+<script src="../../js/pulsClick.js" type="text/javascript" ></script>
 <title>无标题文档</title>
 </head>
 
