--- a/SMSLogin.html
+++ b/SMSLogin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=750,user-scalable=0" />
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0" />
 <meta name="format-detection" content="telephone=no" />
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 <script type="text/javascript" src="js/jquery-1.7.min.js"></script>
@@ -16,7 +16,7 @@
 <div class="header header-bg">
   <ul>
     <h1>短信登录</h1>
-    <a href="javascript:back();" title="" class="back"><img src="images/10.png" alt="" width="24" height="42"/></a>
+    <a href="javascript:back();" title="" class="back"><img src="images/10.png" alt=""/></a>
   </ul>
 </div>
 <!--头部end-->
@@ -28,13 +28,13 @@
       <div><input type="text" value="" placeholder="请输入手机号" /></div>
     </li>
     <li class="ico02">
-      <div class="clearfix get-code">
-        <ul class="fl"><input type="text" value="" placeholder="请输入验证码" /></ul>
-        <ul class="fr code"><a href="javascript:void(0)">获取验证码</a></ul>
+      <div class="get-code">
+        <ul class="m_cell_hd m_cell_primary"><input type="text" value="" placeholder="请输入验证码" /></ul>
+        <ul class="m_cell_ft code"><a href="javascript:void(0)">获取验证码</a></ul>
       </div>  
     </li>
   </ul>
-  <ul class="form01 mt59">
+  <ul class="form01 mt25">
     <li><input type="button" value="下一步" class="button" /></li>
     <li><p>无法获取验证码</p></li>
   </ul>
@@ -42,4 +42,194 @@
 <!--注册end-->
 
 </body>
+
+<script src="js/mui.min.js"></script>
+<script src="js/public.js" type="text/javascript"></script>
+
+
+<script>
+		var domainUrl = GetMvcApiDomain();
+
+		function MathRand() {
+
+			var Num = "";
+
+			for(var i = 0; i < 6; i++) {
+
+				Num += Math.floor(Math.random() * 10);
+
+			}
+			return Num;
+		}
+
+		var InterValObj; //timer变量，控制时间
+		var count = 60; //间隔函数，1秒执行
+		var curCount; //当前剩余秒数
+		var code = ""; //验证码
+		var codeLength = 6; //验证码长度 
+		var smsCode = MathRand();
+
+		function sendMessage() {
+
+			curCount = count;
+
+			var userTel = $("#userTel").val(); //用户uid
+			if(userTel.length == 0 || userTel == "") {
+				$("#userTel").val("");
+				$("#userTel").focus();
+				plus.nativeUI.toast("请输入验证手机号！", {
+					duration: "long"
+				});
+				return false;
+			} else {
+				var jsonData = {
+					"telNo": userTel,
+					"smsCode": smsCode,
+					"smsSource": '0'
+				}
+
+				$.ajax({
+					url: domainUrl + "message/smsCode",
+					type: 'POST',
+					contentType: "application/json; charset=utf-8",
+					dataType: "json",
+					crossDomain: true,
+					data: JSON.stringify(jsonData),
+					//				             data: jsonData,
+					success: function(data) {
+						if(data.status_code == "000000") {
+							$("#btnSendCode").attr("disabled", "true");
+							$("#btnSendCode").val(curCount + "秒后重新获取");
+							InterValObj = window.setInterval(SetRemainTime, 1000); //启动计时器，1秒执行一次
+							localStorage.setItem("snumber", smsCode);
+							plus.nativeUI.toast("验证短信已为您发送，请查收", {
+								duration: "long"
+							});
+
+						} else {
+							plus.nativeUI.toast(data.result, {
+								duration: "long"
+							});
+						}
+
+					},
+					error: function() {
+						plus.nativeUI.toast("网络错误，请稍后再试", {
+							duration: "long"
+						});
+					}
+				});
+			}
+
+		}
+
+		function SetRemainTime() {
+			if(curCount == 0) {
+				window.clearInterval(InterValObj); //停止计时器
+				$("#btnSendCode").removeAttr("disabled"); //启用按钮
+				$("#btnSendCode").val("重新发送验证码");
+				code = ""; //清除验证码。如果不清除，过时间后，输入收到的验证码依然有效
+				sessionStorage.setItem("snumber", "");
+			} else {
+				curCount--;
+				$("#btnSendCode").val(curCount + "秒后重新获取");
+			}
+		}
+
+		function RegCheck() {
+
+			var snumber = localStorage.getItem("snumber");
+			var username = document.getElementById('userTel').value;;
+			var scode = document.getElementById('scode').value;
+			var loginpass = document.getElementById('loginpass').value;
+			var reloginpass = document.getElementById('reloginpass').value;
+			var inviteCode = document.getElementById('inviteCode').value;
+			if(snumber == null || snumber == "") {
+				plus.nativeUI.toast("请进行手机短信验证", {
+								duration: "long"
+							});
+				$("#userTel").focus();
+				return false;
+			} else if(scode == null || scode == '') {
+								plus.nativeUI.toast("请输入验证码", {
+								duration: "long"
+							});
+				$("#scode").focus();
+				return false;
+			} else if(loginpass.length < 6 || loginpass.length > 18) {
+				plus.nativeUI.toast("请输入6-18位的密码", {
+								duration: "long"
+							});
+				$("#loginpass").attr("value", "");
+				$("#loginpass").focus();
+				return false;
+			} else if(loginpass != reloginpass) {
+				plus.nativeUI.toast("两次密码输入不一样", {
+								duration: "long"
+						});
+				$("#reloginpass").attr("value", "");
+				$("#reloginpass").focus();
+				return false;
+			} else {
+
+				infoRegSave(username, scode, loginpass, inviteCode);
+
+			}
+		}
+
+		function infoRegSave(telno, msgcode, loginpass, reginvitecode) {
+
+			var jsonData = {
+				"telno": telno,
+				"smscode": msgcode,
+				"password": loginpass,
+				"x": reginvitecode,
+				"realname": "飞飞",
+				"college": "北京大学",
+				"mailbox": "123123@123.com"
+
+			}
+
+			$.ajax({
+				url: domainUrl + "userinfo/register",
+				type: 'POST',
+				dataType: "json",
+				contentType: "application/json; charset=utf-8",
+				data: JSON.stringify(jsonData),
+				success: function(data) {
+					if(data.status_code == "000000") {
+				     clicked("RegisterBaseInfo.html",true);
+
+
+					} else {
+						plus.nativeUI.toast(data.result, {
+								duration: "long"
+						});
+						return false;
+					}
+
+				},
+				error: function() {
+					plus.nativeUI.toast("网络错误，请稍后再试", {
+								duration: "long"
+						});
+				}
+			});
+
+		}
+
+		document.getElementById("btnsave").addEventListener('tap', function() {
+			RegCheck();
+
+		});
+
+		document.getElementById("NoReceive").addEventListener('tap', function() {
+			mui.openWindow({
+				url: 'TokenNotReceiveHint.html',
+				id: 'TokenNotReceiveHint',
+			})
+		});
+	</script>
+
+
 </html>
